Fixed bugs with white lines

--- a/Weather/Screens/Login/LoginViewController.storyboard
+++ b/Weather/Screens/Login/LoginViewController.storyboard
@@ -20,23 +20,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tLG-Mr-0hK" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                        <rect key="frame" x="0.0" y="82" width="375" height="648"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uXD-ia-jou">
-                                                <rect key="frame" x="82.666666666666686" y="70" width="210" height="118"/>
+                                                <rect key="frame" x="82.666666666666686" y="10" width="210" height="118"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="118" id="Rhu-P4-twp"/>
                                                     <constraint firstAttribute="width" constant="210" id="jq7-F1-qzL"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQM-SZ-tJ1">
-                                                <rect key="frame" x="114.66666666666669" y="228" width="146" height="39"/>
+                                                <rect key="frame" x="114.66666666666669" y="168" width="146" height="39"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="32"/>
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6tz-W0-6Jf">
-                                                <rect key="frame" x="37.666666666666657" y="381" width="300" height="50"/>
+                                                <rect key="frame" x="37.666666666666657" y="299" width="300" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="300" id="fSe-Xh-o4x"/>
                                                     <constraint firstAttribute="height" constant="50" id="kBg-E7-7SH"/>
@@ -45,7 +45,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDJ-L0-0Z5">
-                                                <rect key="frame" x="37.666666666666657" y="669.66666666666663" width="300" height="56"/>
+                                                <rect key="frame" x="37.666666666666657" y="537.66666666666663" width="300" height="56"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="Uqt-cc-pdf"/>
@@ -61,7 +61,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uQq-kz-zDy">
-                                                <rect key="frame" x="152.66666666666666" y="745.66666666666663" width="70" height="30.333333333333371"/>
+                                                <rect key="frame" x="152.66666666666666" y="613.66666666666663" width="70" height="30.333333333333371"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="sign up">
@@ -73,7 +73,7 @@
                                                 </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vsd-V1-Uvr">
-                                                <rect key="frame" x="37.666666666666657" y="457" width="300" height="50"/>
+                                                <rect key="frame" x="37.666666666666657" y="375" width="300" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="16p-01-skd"/>
                                                     <constraint firstAttribute="width" constant="300" id="T4p-Mz-Ije"/>
@@ -90,9 +90,9 @@
                                             <constraint firstItem="eQM-SZ-tJ1" firstAttribute="centerX" secondItem="tLG-Mr-0hK" secondAttribute="centerX" id="I7D-wD-ZvH"/>
                                             <constraint firstItem="6tz-W0-6Jf" firstAttribute="centerX" secondItem="tLG-Mr-0hK" secondAttribute="centerX" id="LRK-Zf-DG9"/>
                                             <constraint firstItem="qDJ-L0-0Z5" firstAttribute="centerX" secondItem="tLG-Mr-0hK" secondAttribute="centerX" id="OfG-x0-F2u"/>
-                                            <constraint firstItem="uXD-ia-jou" firstAttribute="top" secondItem="tLG-Mr-0hK" secondAttribute="top" constant="70" id="Req-WB-eoD"/>
+                                            <constraint firstItem="uXD-ia-jou" firstAttribute="top" secondItem="tLG-Mr-0hK" secondAttribute="top" constant="10" id="Req-WB-eoD"/>
                                             <constraint firstItem="eQM-SZ-tJ1" firstAttribute="top" secondItem="uXD-ia-jou" secondAttribute="bottom" constant="40" id="blY-OT-Mwh"/>
-                                            <constraint firstAttribute="bottom" secondItem="uQq-kz-zDy" secondAttribute="bottom" constant="36" id="l9j-1v-nuZ"/>
+                                            <constraint firstAttribute="bottom" secondItem="uQq-kz-zDy" secondAttribute="bottom" constant="4" id="l9j-1v-nuZ"/>
                                             <constraint firstItem="uXD-ia-jou" firstAttribute="centerX" secondItem="tLG-Mr-0hK" secondAttribute="centerX" id="mqe-tB-T44"/>
                                             <constraint firstItem="Vsd-V1-Uvr" firstAttribute="centerX" secondItem="tLG-Mr-0hK" secondAttribute="centerX" id="oFb-db-pmD"/>
                                             <constraint firstItem="Vsd-V1-Uvr" firstAttribute="top" secondItem="6tz-W0-6Jf" secondAttribute="bottom" constant="26" id="xB9-Sh-Bmy"/>
@@ -103,7 +103,7 @@
                                     <constraint firstItem="tLG-Mr-0hK" firstAttribute="centerY" secondItem="GJE-F2-M0k" secondAttribute="centerY" id="HiW-Ge-mLj"/>
                                     <constraint firstItem="tLG-Mr-0hK" firstAttribute="centerX" secondItem="GJE-F2-M0k" secondAttribute="centerX" id="One-0C-uQk"/>
                                     <constraint firstItem="tLG-Mr-0hK" firstAttribute="leading" secondItem="GJE-F2-M0k" secondAttribute="leading" id="UJj-dQ-937"/>
-                                    <constraint firstItem="tLG-Mr-0hK" firstAttribute="top" secondItem="GJE-F2-M0k" secondAttribute="top" id="gMk-f4-Zdk"/>
+                                    <constraint firstItem="tLG-Mr-0hK" firstAttribute="top" secondItem="GJE-F2-M0k" secondAttribute="top" constant="82" id="gMk-f4-Zdk"/>
                                     <constraint firstAttribute="trailing" secondItem="tLG-Mr-0hK" secondAttribute="trailing" id="glx-58-xhQ"/>
                                     <constraint firstAttribute="bottom" secondItem="tLG-Mr-0hK" secondAttribute="bottom" id="yAC-7l-boY"/>
                                 </constraints>
