Support dark mode
- Added colors set to work easy with colors

--- a/Weather/Screens/Login/LoginViewController.storyboard
+++ b/Weather/Screens/Login/LoginViewController.storyboard
@@ -133,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="397.60000000000002" y="-40.64039408866995"/>
+            <point key="canvasLocation" x="431" y="24"/>
         </scene>
     </scenes>
     <resources>
