Fixed constraints on Forecast screen

--- a/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
+++ b/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
@@ -80,20 +80,20 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKC-Lq-Emm" customClass="WeekDayPicker" customModule="Weather" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="59" width="393" height="56"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="rXw-Bn-vcu"/>
+                                    <constraint firstAttribute="height" constant="56" id="gqy-BP-GxJ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rjz-1y-OQy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="TLY-KZ-KzC"/>
-                            <constraint firstItem="rjz-1y-OQy" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Ten-Qa-wlA"/>
-                            <constraint firstItem="rjz-1y-OQy" firstAttribute="top" secondItem="tKC-Lq-Emm" secondAttribute="bottom" id="YEa-D3-Vqy"/>
-                            <constraint firstItem="tKC-Lq-Emm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="geh-nD-NNt"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="tKC-Lq-Emm" secondAttribute="trailing" id="lhS-1C-0eQ"/>
-                            <constraint firstItem="tKC-Lq-Emm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="uKg-VA-X2O"/>
-                            <constraint firstAttribute="bottom" secondItem="rjz-1y-OQy" secondAttribute="bottom" id="yVT-1Z-yC4"/>
+                            <constraint firstItem="tKC-Lq-Emm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="5fu-15-404"/>
+                            <constraint firstItem="tKC-Lq-Emm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="9LX-qn-AOF"/>
+                            <constraint firstItem="rjz-1y-OQy" firstAttribute="top" secondItem="tKC-Lq-Emm" secondAttribute="bottom" id="H3X-nV-n3c"/>
+                            <constraint firstItem="rjz-1y-OQy" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="OSS-HY-pw7"/>
+                            <constraint firstItem="tKC-Lq-Emm" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="YNE-FF-yUn"/>
+                            <constraint firstItem="rjz-1y-OQy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ie7-Qi-GJv"/>
+                            <constraint firstAttribute="bottom" secondItem="rjz-1y-OQy" secondAttribute="bottom" id="o5d-2l-RWF"/>
                         </constraints>
                     </view>
                     <connections>
@@ -102,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="250" y="-35"/>
+            <point key="canvasLocation" x="249.61832061068702" y="-35.211267605633807"/>
         </scene>
     </scenes>
     <resources>
