--- a/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
+++ b/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
@@ -35,39 +35,65 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQJ-Qo-LGY">
-                                                    <rect key="frame" x="43" y="8" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vqb-Vs-cwr">
-                                                    <rect key="frame" x="44" y="44" width="40" height="40"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aMr-dH-0Ns" userLabel="Shadow View">
+                                                    <rect key="frame" x="18" y="18" width="92" height="92"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="dBG-5J-ovR"/>
-                                                        <constraint firstAttribute="width" constant="40" id="eQj-U2-t2M"/>
+                                                        <constraint firstAttribute="width" constant="92" id="j69-y1-VUh"/>
+                                                        <constraint firstAttribute="height" constant="92" id="ufq-tF-qTt"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XaT-cp-Z3O" userLabel="Container View">
+                                                    <rect key="frame" x="18" y="18" width="92" height="92"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-29°C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQJ-Qo-LGY">
+                                                            <rect key="frame" x="0.0" y="0.0" width="92" height="92"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="92" id="OTe-iB-AZe"/>
+                                                        <constraint firstAttribute="width" constant="92" id="c11-d8-I57"/>
+                                                    </constraints>
+                                                </view>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vqb-Vs-cwr">
+                                                    <rect key="frame" x="54" y="8" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="Ir1-Hj-l4H"/>
+                                                        <constraint firstAttribute="height" constant="20" id="tG4-F2-Nq5"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Gf-Ud-Px2">
-                                                    <rect key="frame" x="43" y="99" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20.08.2023 06:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Gf-Ud-Px2">
+                                                    <rect key="frame" x="12.666666666666664" y="110" width="102.66666666666669" height="10"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="10" id="aiK-ew-ZrW"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="5RD-U1-OSQ"/>
-                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="top" secondItem="vQJ-Qo-LGY" secondAttribute="bottom" constant="15" id="Ad8-K9-32G"/>
-                                                <constraint firstItem="8Gf-Ud-Px2" firstAttribute="top" secondItem="Vqb-Vs-cwr" secondAttribute="bottom" constant="15" id="PpH-Zy-gc9"/>
-                                                <constraint firstItem="8Gf-Ud-Px2" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="Wmi-Q9-3xg"/>
-                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="centerY" secondItem="LHp-qR-lqX" secondAttribute="centerY" id="awC-nD-wXf"/>
-                                                <constraint firstItem="vQJ-Qo-LGY" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="h2U-KJ-i3s"/>
+                                                <constraint firstItem="aMr-dH-0Ns" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="6JG-YS-gAC"/>
+                                                <constraint firstItem="XaT-cp-Z3O" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="AZF-sU-grU"/>
+                                                <constraint firstItem="8Gf-Ud-Px2" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="Bio-KL-8s9"/>
+                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="CS5-1n-NyA"/>
+                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="top" secondItem="XaT-cp-Z3O" secondAttribute="top" constant="-10" id="acF-fu-DGV"/>
+                                                <constraint firstItem="aMr-dH-0Ns" firstAttribute="centerY" secondItem="LHp-qR-lqX" secondAttribute="centerY" id="boV-7E-GaG"/>
+                                                <constraint firstAttribute="bottom" secondItem="8Gf-Ud-Px2" secondAttribute="bottom" constant="8" id="eBX-cQ-Xew"/>
+                                                <constraint firstItem="XaT-cp-Z3O" firstAttribute="centerY" secondItem="LHp-qR-lqX" secondAttribute="centerY" id="qn2-M1-RIW"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="128" height="128"/>
                                         <connections>
+                                            <outlet property="containerView" destination="XaT-cp-Z3O" id="Fwh-ga-zfT"/>
                                             <outlet property="dateLabel" destination="8Gf-Ud-Px2" id="Bki-ds-Smf"/>
                                             <outlet property="iconView" destination="Vqb-Vs-cwr" id="Y3H-wT-V8a"/>
+                                            <outlet property="shadowView" destination="aMr-dH-0Ns" id="SRp-0H-mwj"/>
                                             <outlet property="temperatureLabel" destination="vQJ-Qo-LGY" id="zMw-b7-nOr"/>
                                         </connections>
                                     </collectionViewCell>
