--- a/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
+++ b/Weather/Screens/Forecast/Controller/ForecastViewController.storyboard
@@ -55,10 +55,10 @@
                                                     </constraints>
                                                 </view>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vqb-Vs-cwr">
-                                                    <rect key="frame" x="54" y="4" width="20" height="20"/>
+                                                    <rect key="frame" x="44" y="-6" width="40" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="20" id="Ir1-Hj-l4H"/>
-                                                        <constraint firstAttribute="height" constant="20" id="tG4-F2-Nq5"/>
+                                                        <constraint firstAttribute="width" constant="40" id="Ir1-Hj-l4H"/>
+                                                        <constraint firstAttribute="height" constant="40" id="tG4-F2-Nq5"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20.08.2023 06:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Gf-Ud-Px2">
@@ -72,12 +72,12 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="5iW-jf-iUk"/>
                                                 <constraint firstItem="aMr-dH-0Ns" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="6JG-YS-gAC"/>
                                                 <constraint firstItem="XaT-cp-Z3O" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="AZF-sU-grU"/>
                                                 <constraint firstItem="8Gf-Ud-Px2" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="Bio-KL-8s9"/>
-                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="centerX" secondItem="LHp-qR-lqX" secondAttribute="centerX" id="CS5-1n-NyA"/>
                                                 <constraint firstItem="8Gf-Ud-Px2" firstAttribute="top" secondItem="aMr-dH-0Ns" secondAttribute="bottom" constant="4" id="YI1-wq-tBz"/>
-                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="top" secondItem="XaT-cp-Z3O" secondAttribute="top" constant="-10" id="acF-fu-DGV"/>
+                                                <constraint firstItem="Vqb-Vs-cwr" firstAttribute="top" secondItem="XaT-cp-Z3O" secondAttribute="top" constant="-20" id="acF-fu-DGV"/>
                                                 <constraint firstItem="aMr-dH-0Ns" firstAttribute="centerY" secondItem="LHp-qR-lqX" secondAttribute="centerY" constant="-4" id="boV-7E-GaG"/>
                                                 <constraint firstItem="XaT-cp-Z3O" firstAttribute="centerY" secondItem="LHp-qR-lqX" secondAttribute="centerY" constant="-4" id="qn2-M1-RIW"/>
                                             </constraints>
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="173" y="-36"/>
+            <point key="canvasLocation" x="27" y="-120"/>
         </scene>
     </scenes>
     <resources>
